--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@adonisjs/mail": "^3.0.10",
     "@adonisjs/validator": "^5.0.6",
     "@adonisjs/websocket": "^1.0.12",
+    "@mysql/xdevapi": "8.0.18",
     "adonis-acl": "^1.1.1",
     "adonis-bumblebee": "^2.0.0",
     "mysql": "^2.17.1"
